feat: Implement push notification function

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -22,3 +22,9 @@
 .read-the-docs {
   color: #888;
 }
+
+@media (prefers-color-scheme: dark) {
+  .logo {
+    /* content: url("../public/favicon-light.png"); */
+  }
+}
