--- a/client/src/App.css
+++ b/client/src/App.css
@@ -25,6 +25,6 @@
 
 @media (prefers-color-scheme: dark) {
   .logo {
-    /* content: url("../public/favicon-light.png"); */
+    content: url("./assets/logos/progressive-web-apps-dark-logo.png");
   }
 }
